# HajimeAIWorkSpace

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  bazel-HajimeAIWorkSpace  deps.bzl  go.mod  go.sum  requirements.in  requirements.txt  requirements_lock.txt
common/apps/go_example_app/: BUILD.bazel  main.go  main_test.go
common/apps/hajime_scraper/: BUILD.bazel  README.md  formate.py  run_scraper.py  scrapy.cfg
common/apps/hajime_scraper/hajime_scraper/: settings.py
common/apps/hajime_scraper/hajime_scraper_lib/: BUILD.bazel  items.py  middlewares.py  pipelines.py  settings.py
common/apps/hajime_web/: .env.example  .gitignore  4arts.pem  BUILD.bazel  README.md  c.csv  cmd_set_parent.py  cmd_sync_user_stat.py  config.yaml  daemon.py  daemonv2.py  db.sql  db_test.py  go.py  hajime.py  index.html  migrate.py  pyproject.toml  requirements.txt  test.py  www.sh
common/apps/hajime_web/app/: BUILD.bazel  config.py  database.py  main.py
golangp/apps/AgentTown/: AgentTownMain.go  BUILD.bazel  README.md
golangp/apps/AgentTown/agent/: BUILD.bazel  agent.go
golangp/apps/AgentTown/agent_adapter/: BUILD.bazel  constant.go  dify.go  function_call.go  interface.go
golangp/apps/AgentTown/config/: BUILD.bazel  config.go
golangp/apps/AgentTown/runtime/: BUILD.bazel  runtime.go  scheduler.go  taskqueue.go
golangp/apps/AgentTown/service/: BUILD.bazel  web.go
golangp/apps/AgentTown/solana/: BUILD.bazel  generator.go
golangp/apps/AgentTown/task/: BUILD.bazel  runnable.go  task.go
golangp/apps/AgentTown/telemetry/: BUILD.bazel  telemetry.go
golangp/apps/AgentTown/test/: BUILD.bazel  common_test.go  create_market_test.go  create_pool_test.go  create_token_test.go  revoke_mint_authority_test.go  solana_swap_test.go  solana_test.go  trade_agent_test.go
golangp/apps/Solana/: BUILD.bazel  main.go
golangp/apps/hajime_center/: .gitignore  BUILD.bazel  Dockerfile  HajimeCenter.conf  app.dev.env  app.env  docker-compose-dev.yml  docker-compose.yml  docker-compose_dev.yml  main.go  solana__transactions.csv  solana_transactions.csv
golangp/apps/hajime_center/constants/: BUILD.bazel  constants.go
golangp/apps/hajime_center/controllers/: BUILD.bazel  agent_log.controller.go  apps.controller.go  auth.controller.go  balanceHistory.controller.go  conversations.controller.go  creditSystem.controller.go  document.controller.go  referralCode.controller.go  tokenClaim.controller.go
golangp/apps/hajime_center/dify/: BUILD.bazel  client.go  console-workspaces.go  login.go
golangp/apps/hajime_center/initializers/: BUILD.bazel  connectDB.go  loadEnv.go
golangp/apps/hajime_center/mail_utils/: BUILD.bazel  email.go
golangp/apps/hajime_center/middleware/: BUILD.bazel  deserialize-app.go  deserialize-user.go
golangp/apps/hajime_center/migrate/: BUILD.bazel  migrate.go
golangp/apps/hajime_center/models/: BUILD.bazel  agent_log.model.go  agent_task.model.go  balance-history.model.go  billing-history.model.go  conversation.model.go  dataset.model.go  dify.model.go  hajime_apps.model.go  referralCode.model.go  referral_code.model.go  user.model.go  user_assets.model.go
golangp/apps/hajime_center/proxy/: BUILD.bazel  auth.go  middleware.go  proxies.go  request.go
golangp/apps/hajime_center/routes/: BUILD.bazel  apps.routes.go  auth.routes.go  balanceHistory.routes.go  conversations.routes.go  document.routes.go  model.routes.go  referralCode.routes.go  tokenClaim.routes.go
golangp/apps/hajime_center/services/: BUILD.bazel  agent_log.service.go  agent_task.service.go  agent_task_test.go
golangp/apps/hajime_center/solanaTask/: BUILD.bazel  solana.go
golangp/apps/raydium/: BUILD.bazel  swap_token.go
golangp/apps/solana/: BUILD.bazel  connector.go  createAccount.go
golangp/common/dify/: BUILD.bazel  api-chat-messages.go  api.go  client.go  console-datasets-file-upload.go  console-datasets-init.go  const.go  login.go  model.go  response-schema.json  tags.go
golangp/common/initializers/: BUILD.bazel  app.dev.env  config_struct.go  loadEnv.go
golangp/common/logging/: BUILD.bazel  logger.go
golangp/common/mail_server/: BUILD.bazel  mail_server.go
golangp/common/node/: BUILD.bazel  configs.go  model.go  node_Info.go  utils.go  utils_test.go
golangp/common/utils/: BUILD.bazel  password.go  token.go
golangp/demo/: BUILD.bazel  demo_main.go
golangp/hajime_center/: BUILD.bazel  app.dev.env  main.go
golangp/hajime_center/constants/: BUILD.bazel
golangp/hajime_center/controllers/: BUILD.bazel  apps.controller.go  auth.controller.go  conversations.controller.go  document.controller.go
golangp/hajime_center/dify/: BUILD.bazel  apps.go  client.go  files.go  login.go  messages.go
golangp/hajime_center/initializers/: BUILD.bazel  connectDB.go  loadEnv.go
golangp/hajime_center/logger/: BUILD.bazel  logger.go
golangp/hajime_center/mail_utils/: BUILD.bazel  email.go
golangp/hajime_center/middleware/: BUILD.bazel  deserialize-app.go  deserialize-user.go
golangp/hajime_center/migrate/: BUILD.bazel  migrate.go
golangp/hajime_center/models/: BUILD.bazel  apps.model.go  user.model.go
golangp/hajime_center/proxy/: BUILD.bazel  auth.go  proxies.go
golangp/hajime_center/routes/: BUILD.bazel  apps.routes.go  auth.routes.go  conversations.routes.go  document.routes.go  model.routes.go
golangp/hajime_center/templates/: BUILD.bazel
golangp/hajime_center/test/: BUILD.bazel
golangp/hajime_center/utils/: BUILD.bazel  email.go  password.go
golangp/hajime_center/xminio/: BUILD.bazel  object-post.go
golangp/libs/: BUILD.bazel  utils.go
golangp/test/: BUILD.bazel  common_test.go  demo_test.go  dify_test.go  initializers_test.go  solana_token_test.go
golangp/test/binary_config_test/: BUILD.bazel  main.go
infra/: BUILD.bazel  README.md
infra/ansible/: BUILD.bazel  README.md  ansible.cfg  hajime_center_deploy.yaml  hajime_mail_deploy.yaml  hajime_test_host_connect.yaml  hajime_tokenfate_deploy.yaml
infra/ansible/development/: hosts
infra/ansible/production/: hosts
protos/: BUILD.bazel  raydium.proto
(+510 files in other folders)
