load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "demo_main",
    srcs = ["demo_main.go"],
    importpath = "hajime/golangp/demo",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/libs:utils",
        "@com_github_goccy_go_json//:go_default_library",  # 添加 go-json 依赖
    ],
)
