load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "common_test",
    srcs = ["common_test.go"],
    deps = [
        "//golangp/common/utils",
        "@com_github_magiconair_properties//assert",
    ],
)

go_test(
    name = "test_test",
    srcs = ["common_test.go"],
    deps = [
        "//golangp/common/utils",
        "@com_github_magiconair_properties//assert",
    ],
)
