load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "common_test",
    srcs = ["common_test.go"],
    deps = [
        "//golangp/common/utils",
        "@com_github_magiconair_properties//assert",
    ],
)

go_test(
    name = "solana_token_test",
    srcs = ["solana_token_test.go"],
    deps = [
        "hajime/golangp/apps/Solana/pkg/token",
        "@com_github_blocto_solana_go_sdk//common",
    ],
)

go_test(
    name = "config_test",
    srcs = ["config_test.go"],
    deps = [
        "//golangp/common/initializers",
    ],
)

go_test(
    name = "dify_test",
    srcs = ["dify_test.go"],
    deps = [
        "//golangp/apps/hajime_center/constants",
        "//golangp/common/dify",
    ],
)

go_test(
    name = "test_test",
    srcs = [
        "common_test.go",
        "dify_test.go",
        "initializers_test.go",
        "solana_token_test.go",
    ],
    deps = [
        "//golangp/apps/Solana/pkg/token",
        "//golangp/common/dify",
        "//golangp/common/initializers",
        "//golangp/common/utils",
        "@com_github_blocto_solana_go_sdk//common",
        "@com_github_magiconair_properties//assert",
    ],
)
