load("@rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "AgentTownMain",
    srcs = ["AgentTownMain.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/apps/AgentTown/config:config_lib",
        "//golangp/apps/AgentTown/runtime:runtime_lib",
        "//golangp/apps/AgentTown/task:task_lib",
        "//golangp/apps/AgentTown/telemetry:telemetry_lib",
    ],
)
