load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "solana_token_transfer",
    data = [
        "assets/wallet_3qQEWctNXM.json",
        "assets/wallet_7dEc3i8Niz.json",
    ],
    embed = [":Solana_lib"],
    importpath = "hajime/golangp/apps/Solana",
    visibility = ["//visibility:public"],
)

go_library(
    name = "Solana_lib",
    srcs = ["main.go"],
    importpath = "hajime/golangp/apps/Solana",
    visibility = ["//visibility:private"],
    deps = [
        "//golangp/apps/Solana/pkg/account",
        "//golangp/apps/Solana/pkg/airdrop",
        "//golangp/apps/Solana/pkg/token",
        "@com_github_blocto_solana_go_sdk//common",
    ],
)
