load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files", "strip_prefix")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

exports_files(
    ["app.env"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "hajime_center",
    data = ["app.env"],
    embed = [":hajime_center_lib"],
    importpath = "hajime/golangp/apps/hajime_center",
    visibility = ["//visibility:public"],
)

exports_files(["app.dev.env"])

pkg_files(
    name = "hajime_templates_tar",
    srcs = [
        "//golangp/apps/hajime_center/templates:hajime_templates",
    ],
    prefix = "templates",
)

pkg_tar(
    # data files cannot be included along with the binary following dependency rules, so we need to include them
    # separately in the tar.
    name = "hajime_center_tar",
    srcs = [
        ":hajime_center",
        ":hajime_templates_tar",
        "//golangp/apps/hajime_center:HajimeCenter.conf",
        "//golangp/apps/hajime_center:app.dev.env",
    ],  # Include the binary
    extension = "tar.gz",
    package_dir = "Hajime",  # Flatten everything in the tarball to the root
)

go_library(
    name = "hajime_center_lib",
    srcs = ["main.go"],
    importpath = "hajime/golangp/apps/hajime_center",
    visibility = ["//visibility:private"],
    deps = [
        "//golangp/apps/hajime_center/controllers",
        "//golangp/apps/hajime_center/initializers",
        "//golangp/apps/hajime_center/proxy",
        "//golangp/apps/hajime_center/routes",
        "//golangp/common/logging:logger",
        "@com_github_gin_contrib_cors//:cors",
        "@com_github_gin_gonic_gin//:gin",
    ],
)
