load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "dify",
    srcs = glob(["**/*.go"]),
    importpath = "hajime/golangp/common/dify",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/apps/hajime_center/constants",
        "//golangp/common/initializers",
        "//golangp/common/logging:logger",
        "//golangp/common/utils",
    ],
)
