load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "dify",
    srcs = [
        "api.go",
        "api-chat-messages.go",
        "api-conversations.go",
        "apps.go",
        "client.go",
        "console-datasets.go",
        "console-datasets-file-upload.go",
        "console-datasets-init.go",
        "console-workspaces.go",
        "const.go",
        "files.go",
        "fn.go",
        "fn-api.go",
        "fn-console.go",
        "login.go",
        "messages.go",
        "model.go",
        "passport.go",
        "tags.go",
    ],
    importpath = "hajime/golangp/common/dify",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/apps/hajime_center/constants",
        "//golangp/common/initializers",
        "//golangp/common/logging:logger",
    ],
)
