load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "initializers",
    srcs = [
        "config_struct.go",
        "connectDB.go",
        "loadEnv.go",
    ],
    data = glob(["*.env"]),
    importpath = "hajime/golangp/common/initializers",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/common/logging:logger",
        "@com_github_spf13_viper//:viper",
        "@io_gorm_driver_postgres//:postgres",
        "@io_gorm_gorm//:gorm",
    ],
)
