load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "logger",
    srcs = glob(["**/*.go"]),
    importpath = "hajime/golangp/common/logging",
    visibility = ["//visibility:public"],
)

go_library(
    name = "logging",
    srcs = ["logger.go"],
    importpath = "hajime/golangp/apps/hajime_center/golangp/common/logging",
    visibility = ["//visibility:public"],
)
