load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "utils",
    srcs = glob(["**/*.go"]),
    importpath = "hajime/golangp/apps/hajime_center/golangp/common/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/common/logging:logger",
        "@com_github_golang_jwt_jwt//:jwt",
        "@com_github_smartwalle_alipay_v3//:alipay",
        "@org_golang_x_crypto//bcrypt",
    ],
)
