load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "dify",
    srcs = glob(["**/*.go"]),
    importpath = "hajime/golangp/hajime_center/dify",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/hajime_center/initializers",
        "//golangp/hajime_center/logger",
    ],
)
