load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "initializers",
    srcs = glob(["**/*.go"]),
    importpath = "hajime/golangp/hajime_center/initializers",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/hajime_center/logger",
        "@io_gorm_driver_postgres//:go_default_library",
        "@io_gorm_gorm//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
