load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mail_utils",
    srcs = glob(["**/*.go"]),
    data = ["//golangp/hajime_center/templates:hajime_templates"],
    importpath = "hajime/golangp/hajime_center/mail_utils",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/common/logging:logger",
        "//golangp/hajime_center/initializers",
        "//golangp/hajime_center/models",
        "@com_github_golang_jwt_jwt//:go_default_library",
        "@com_github_k3a_html2text//:go_default_library",
        "@com_github_smartwalle_alipay_v3//:go_default_library",
        "@in_gopkg_gomail_v2//:go_default_library",
        "@org_golang_x_crypto//bcrypt:go_default_library",
    ],
)
