load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "middleware",
    srcs = glob(["**/*.go"]),
    importpath = "hajime/golangp/hajime_center/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/common/utils",
        "//golangp/hajime_center/initializers",
        "//golangp/hajime_center/models",
        "@com_github_gin_gonic_gin//:go_default_library",
    ],
)
