load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "migrate",
    srcs = glob(["**/*.go"]),
    importpath = "hajime/golangp/hajime_center/migrate",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/hajime_center/constants",
        "//golangp/hajime_center/initializers",
        "//golangp/hajime_center/logger",
        "//golangp/hajime_center/models",
        "//golangp/hajime_center/utils",
        "@io_gorm_gorm//:go_default_library",
    ],
)
